--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <script src="views/create/create.js"></script>
 <script src="views/account/account.js"></script>
 <script src="views/dbxauth/dbxauth.js"></script>
+<script src="views/filelist/filelist.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
