filelist added; user can download single files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>ShrMusic</title>
     <link href="config/bootstrap-3.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="config/bootstrap-3.3.2-dist/cover.css" rel="stylesheet">
+    <link href="config/custom-css.css" rel="stylesheet">
     <script src="config/angular.min.js"></script>
     <script src="config/angular-ui-router.min.js"></script>
     <script src="config/angular-cookies.min.js"></script>
