--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <nav>
                         <ul class="nav masthead-nav">
                             <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#">Login</a></li>
+                            <li><a href="#/login"><span class="text-info">Login</span></a></li>
+                            <li><a href="#/create"><span class="text-success">Sign-up</span></a></li>
                         </ul>
                     </nav>
                 </div>
@@ -65,6 +66,7 @@
 <script src="views/account/account.js"></script>
 <script src="views/dbxauth/dbxauth.js"></script>
 <script src="views/filelist/filelist.js"></script>
+<script src="views/login/login.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
